--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <img src="/imgs/logo/logo.png" alt="logo">
+        </div>
+        <div class="navbar__menu">
+            <ul>
+                <li class="navbar__menu--item active">Home</li>
+                <li class="navbar__menu--item">About</li>
+                <li class="navbar__menu--item">Skills</li>
+                <li class="navbar__menu--item">Work</li>
+                <li class="navbar__menu--item">Contact</li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
