--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="/imgs/profile.jpg" alt="myProfile" class="home__profile">
+        <h1 class="home__title">Hola! I'm Min Gyeong</h1>
+        <h2 class="home__description">Software engineer who can do both front-end and back-end</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
 </body>
 </html>
