--- a/index.html
+++ b/index.html
@@ -39,5 +39,80 @@
         <h2 class="home__description">Software engineer who can do both front-end and back-end</h2>
         <button class="home__contact">Contact Me</button>
     </section>
+    <!-- About -->
+    <section id="about" class="section section__container">
+        <h1>About me</h1>
+        <p>
+            근성있는 개발자, 이민경입니다. 저는 새로운 기술을 익히고, 이를 활용하여 고객에게 편리한 화면을 제공하는 것에 보람을 느낍니다. 
+            또한, 코드 작생 시 발생하는 오류들을 확인하고 해결해 나가는 것에 보람을 느낍니다.
+            쌍용교육센터에서 IT 교육을 들으며, 개인 프로젝트부터 영화 예매 사이트를 구축하는 팀 프로젝트를 진행했습니다.
+            이후, 약 2년 5개월 간 행정안전부 기반의 농산물 쇼핑몰 유지보수를 담당하며 고객에게 안정적인 서비스를 제공했습니다.
+        </p>
+        <div class="about__stack">
+            <div class="stack">
+                <div class="stack__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="stack__title">
+                    Front-end
+                </div>
+                <div class="stack__description">
+                    Html, css, Javascript
+                </div>
+            </div>
+            <div class="stack">
+                <div class="stack__icon">
+                    <i class="fas fa-server"></i>
+                </div>
+                <div class="stack__title">
+                    Back-end
+                </div>
+                <div class="stack__description">
+                    Java, Javascript
+                </div>
+            </div>
+        </div>
+        <div class="about__education">
+            <h2>Education History</h2>
+            <div class="education">
+                <img src="/imgs/education/inha_logo.jpg" alt="inha_logo" class="education__logo">
+                <div class="education__description">
+                    <p class="education__name">인하대학교(생명과학과)</p>
+                    <p class="education__period">2013.03 - 2018.02</p>
+                </div>
+            </div>
+            <div class="education">
+                <img src="/imgs/education/sist_logo.jpg" alt="sist_logo" class="education__logo">
+                <div class="education__description">
+                    <p class="education__name">쌍용교육센터</p>
+                    <p class="education__period">2017.06 - 2017.12</p>
+                </div>
+            </div>
+            <div class="education">
+                <img src="/imgs/education/nia_logo.jpg" alt="nia_logo" class="education__logo">
+                <div class="education__description">
+                    <p class="education__name">한국인터넷진흥원</p>
+                    <p class="education__period">2018.03.22</p>
+                </div>
+            </div>
+            <div class="education">
+                <img src="/imgs/education/uni_logo.png" alt="uni_logo" class="education__logo">
+                <div class="education__description">
+                    <p class="education__name">고려사이버대학교 편입(소프트웨어공학과)</p>
+                    <p class="education__period">2018.08 - 2020.08</p>
+                </div>
+            </div>
+        </div>
+        <div class="about__career">
+            <h2>Job History</h2>
+            <div class="career">
+                <img src="/imgs/career/logo_rian.png" alt="logo_rian" class="career__logo">
+                <div class="career__description">
+                    <p class="career__name">행정안전부 기반 농산물 쇼핑몰(인빌쇼핑)</p>
+                    <p class="career__period">2017.12 - 2020.04</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
