--- a/index.html
+++ b/index.html
@@ -159,5 +159,19 @@
             </a>
         </div>
     </section>
+    <!-- Contact -->
+    <section id="contact" class="section">
+        <h1 class="contact__title">CONTACT ME</h1>
+        <h2 class="contact__email">mglee.developer@gmail.com</h2>
+        <div class="contact__links">
+            <a href="" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="mailto:mglee.developer@gamil.com" target="_blank">
+                <i class="fas fa-at"></i>
+            </a>
+        </div>
+        <p class="contact__rights">2020 Dveloper Ming · All rights reserved</p>
+    </section>
 </body>
 </html>
