HTML : final touch

--- a/index.html
+++ b/index.html
@@ -187,47 +187,49 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-        <h1>My Work</h1>
-        <h3>Projects</h3>
-        <div class="work__categories">
-            <button class="category__btn active">ALL<span class="category__count">3</span></button>
-            <button class="category__btn">Front-end<span class="category__count">2</span></button>
-            <button class="category__btn">Back-end<span class="category__count">1</span></button>
-        </div>
-        <div class="work__projects">
-            <a href="" class="project">
-                <img src="/imgs/projects/myportfolio.png" alt="project" class="project__image">
-                <div class="project__description">
-                    <h3>My portfolio</h3>
-                    <p>2020.08.01 ~ 2020.08.31</p>
-                    <h3>Tech Stack</h3>
-                    <p>
-                        <span>HTML</span><span>CSS</span><span>JavaScript</span>
-                    </p>
-                </div>
-            </a>
-            <a href="" class="project">
-                <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
-                <div class="project__description">
-                    <h3>My portfolio</h3>
-                    <p>2020.08.01 ~ 2020.08.31</p>
-                    <h3>Tech Stack</h3>
-                    <p>
-                        <span>HTML</span><span>CSS</span><span>JavaScript</span>
-                    </p>
-                </div>
-            </a>
-            <a href="" class="project">
-                <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
-                <div class="project__description">
-                    <h3>My portfolio</h3>
-                    <p>2020.08.01 ~ 2020.08.31</p>
-                    <h3>Tech Stack</h3>
-                    <p>
-                        <span>HTML</span><span>CSS</span><span>JavaScript</span>
-                    </p>
-                </div>
-            </a>
+        <div class="section__conta">
+            <h1>My Work</h1>
+            <h3>Projects</h3>
+            <div class="work__categories">
+                <button class="category__btn active">ALL<span class="category__count">3</span></button>
+                <button class="category__btn">Front-end<span class="category__count">2</span></button>
+                <button class="category__btn">Back-end<span class="category__count">1</span></button>
+            </div>
+            <div class="work__projects">
+                <a href="" class="project">
+                    <img src="/imgs/projects/myportfolio.png" alt="project" class="project__image">
+                    <div class="project__description">
+                        <h3>My portfolio</h3>
+                        <p>2020.08.01 ~ 2020.08.31</p>
+                        <h3>Tech Stack</h3>
+                        <p>
+                            <span>HTML</span><span>CSS</span><span>JavaScript</span>
+                        </p>
+                    </div>
+                </a>
+                <a href="" class="project">
+                    <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
+                    <div class="project__description">
+                        <h3>My portfolio</h3>
+                        <p>2020.08.01 ~ 2020.08.31</p>
+                        <h3>Tech Stack</h3>
+                        <p>
+                            <span>HTML</span><span>CSS</span><span>JavaScript</span>
+                        </p>
+                    </div>
+                </a>
+                <a href="" class="project">
+                    <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
+                    <div class="project__description">
+                        <h3>My portfolio</h3>
+                        <p>2020.08.01 ~ 2020.08.31</p>
+                        <h3>Tech Stack</h3>
+                        <p>
+                            <span>HTML</span><span>CSS</span><span>JavaScript</span>
+                        </p>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <!-- Contact -->
