--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <li class="navbar__menu--item">Contact</li>
             </ul>
         </div>
+
+        <!-- Toggle Button -->
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <!-- Home -->
     <section id="home">
@@ -53,9 +58,9 @@
                 <div class="stack__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="stack__title">
+                <h2 class="stack__title">
                     Front-end
-                </div>
+                </h2>
                 <div class="stack__description">
                     Html, css, Javascript
                 </div>
