JS : scroll section + handle btn

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
         <div class="navbar__menu">
             <ul>
-                <li class="navbar__menu--item active">Home</li>
-                <li class="navbar__menu--item">About</li>
-                <li class="navbar__menu--item">Skills</li>
-                <li class="navbar__menu--item">Work</li>
-                <li class="navbar__menu--item">Contact</li>
+                <li class="navbar__menu--item" data-link="#home">Home</li>
+                <li class="navbar__menu--item" data-link="#about">About</li>
+                <li class="navbar__menu--item" data-link="#skills">Skills</li>
+                <li class="navbar__menu--item" data-link="#work">Work</li>
+                <li class="navbar__menu--item" data-link="#contact">Contact</li>
             </ul>
         </div>
 
@@ -42,7 +42,7 @@
         <img src="/imgs/profile.jpg" alt="myProfile" class="home__profile">
         <h1 class="home__title">Hola! I'm Min Gyeong</h1>
         <h2 class="home__description">Software engineer who can do both front-end and back-end</h2>
-        <button class="home__contact">Contact Me</button>
+        <button class="home__contact" data-link="#contact">Contact Me</button>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
