--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="/imgs/profile.jpg" alt="myProfile" class="home__profile">
-        <h1 class="home__title">Hola! I'm Min Gyeong</h1>
-        <h2 class="home__description">Software engineer who can do both front-end and back-end</h2>
-        <button class="home__contact" data-link="#contact">Contact Me</button>
+        <div class="home__container">
+            <img src="/imgs/profile.jpg" alt="myProfile" class="home__profile">
+            <h1 class="home__title">Hola! I'm Min Gyeong</h1>
+            <h2 class="home__description">Software engineer who can do both front-end and back-end</h2>
+            <button class="home__contact" data-link="#contact">Contact Me</button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
