--- a/index.html
+++ b/index.html
@@ -253,5 +253,10 @@
         </div>
         <p class="contact__rights">2020 Dveloper Ming · All rights reserved</p>
     </section>
+
+    <!-- Arrow Up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-circle-up"></i>
+    </button>
 </body>
 </html>
