--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <h1>My Work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn active" data-filter="*">ALL<span class="category__count">3</span></button>
+                <button class="category__btn" data-filter="*">ALL<span class="category__count">3</span></button>
                 <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">2</span></button>
                 <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">1</span></button>
             </div>
