Final final touch

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">1</span></button>
             </div>
             <div class="work__projects">
-                <a href="" class="project" target="blank" data-type="front-end">
+                <a href="https://github.com/mglee-developer/portfolio" class="project" target="_blank" data-type="front-end">
                     <img src="/imgs/projects/myportfolio.png" alt="project" class="project__image">
                     <div class="project__description">
                         <h3>My portfolio</h3>
@@ -214,7 +214,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="" class="project" target="blank" data-type="front-end">
+                <a href="" class="project" target="_blank" data-type="front-end">
                     <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
                     <div class="project__description">
                         <h3>My portfolio</h3>
@@ -225,7 +225,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="" class="project" target="blank" data-type="back-end">
+                <a href="" class="project" target="_blank" data-type="back-end">
                     <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
                     <div class="project__description">
                         <h3>My portfolio</h3>
@@ -244,7 +244,7 @@
         <h1 class="contact__title">CONTACT ME</h1>
         <h2 class="contact__email">mglee.developer@gmail.com</h2>
         <div class="contact__links">
-            <a href="" target="_blank">
+            <a href="https://github.com/" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
             <a href="mailto:mglee.developer@gamil.com" target="_blank">
