--- a/index.html
+++ b/index.html
@@ -198,23 +198,23 @@
             <h1>My Work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
-                <button class="category__btn" data-filter="*">ALL<span class="category__count">3</span></button>
-                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">2</span></button>
-                <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">1</span></button>
+                <button class="category__btn" data-filter="*">ALL<span class="category__count">1</span></button>
+                <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">1</span></button>
+                <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">0</span></button>
             </div>
             <div class="work__projects">
                 <a href="https://github.com/mglee-developer/portfolio" class="project" target="_blank" data-type="front-end">
                     <img src="/imgs/projects/myportfolio.png" alt="project" class="project__image">
                     <div class="project__description">
-                        <h3>My portfolio</h3>
-                        <p>2020.08.01 ~ 2020.08.31</p>
+                        <h3>Hola! I'm Min Gyeong</h3>
+                        <p>2020.08.10 ~ 2020.08.28</p>
                         <h3>Tech Stack</h3>
                         <p>
                             <span>HTML</span><span>CSS</span><span>JavaScript</span>
                         </p>
                     </div>
                 </a>
-                <a href="" class="project" target="_blank" data-type="front-end">
+                <!-- <a href="" class="project" target="_blank" data-type="front-end">
                     <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
                     <div class="project__description">
                         <h3>My portfolio</h3>
@@ -235,7 +235,7 @@
                             <span>HTML</span><span>CSS</span><span>JavaScript</span>
                         </p>
                     </div>
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
