--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </div>
             <div class="work__projects">
                 <a href="https://github.com/mglee-developer/portfolio" class="project" target="_blank" data-type="front-end">
-                    <img src="/imgs/projects/myportfolio.png" alt="project" class="project__image">
+                    <img src="/imgs/projects/myportfolio.PNG" alt="project" class="project__image">
                     <div class="project__description">
                         <h3>Hola! I'm Min Gyeong</h3>
                         <p>2020.08.10 ~ 2020.08.28</p>
