image location modification

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <img src="/imgs/logo/logo.png" alt="logo">
+            <img src="./imgs/logo/logo.png" alt="logo">
         </div>
         <div class="navbar__menu">
             <ul>
@@ -40,7 +40,7 @@
     <!-- Home -->
     <section id="home">
         <div class="home__container">
-            <img src="/imgs/profile.jpg" alt="myProfile" class="home__profile">
+            <img src="./imgs/profile.jpg" alt="myProfile" class="home__profile">
             <h1 class="home__title">Hola! I'm Min Gyeong</h1>
             <h2 class="home__description">Software engineer who can do both front-end and back-end</h2>
             <button class="home__contact" data-link="#contact">Contact Me</button>
@@ -82,28 +82,28 @@
         <div class="about__education">
             <h2>Education History</h2>
             <div class="education">
-                <img src="/imgs/education/inha_logo.jpg" alt="inha_logo" class="education__logo">
+                <img src="./imgs/education/inha_logo.jpg" alt="inha_logo" class="education__logo">
                 <div class="education__description">
                     <p class="education__name">인하대학교(생명과학과)</p>
                     <p class="education__period">2013.03 - 2018.02</p>
                 </div>
             </div>
             <div class="education">
-                <img src="/imgs/education/sist_logo.jpg" alt="sist_logo" class="education__logo">
+                <img src="./imgs/education/sist_logo.jpg" alt="sist_logo" class="education__logo">
                 <div class="education__description">
                     <p class="education__name">쌍용교육센터</p>
                     <p class="education__period">2017.06 - 2017.12</p>
                 </div>
             </div>
             <div class="education">
-                <img src="/imgs/education/nia_logo.jpg" alt="nia_logo" class="education__logo">
+                <img src="./imgs/education/nia_logo.jpg" alt="nia_logo" class="education__logo">
                 <div class="education__description">
                     <p class="education__name">한국인터넷진흥원</p>
                     <p class="education__period">2018.03.22</p>
                 </div>
             </div>
             <div class="education">
-                <img src="/imgs/education/uni_logo.png" alt="uni_logo" class="education__logo">
+                <img src="./imgs/education/uni_logo.png" alt="uni_logo" class="education__logo">
                 <div class="education__description">
                     <p class="education__name">고려사이버대학교 편입(소프트웨어공학과)</p>
                     <p class="education__period">2018.08 - 2020.08</p>
@@ -113,7 +113,7 @@
         <div class="about__career">
             <h2>Job History</h2>
             <div class="career">
-                <img src="/imgs/career/logo_rian.png" alt="logo_rian" class="career__logo">
+                <img src="./imgs/career/logo_rian.png" alt="logo_rian" class="career__logo">
                 <div class="career__description">
                     <p class="career__name">행정안전부 기반 농산물 쇼핑몰(인빌쇼핑)</p>
                     <p class="career__period">2017.12 - 2020.04</p>
@@ -204,7 +204,7 @@
             </div>
             <div class="work__projects">
                 <a href="https://github.com/mglee-developer/portfolio" class="project" target="_blank" data-type="front-end">
-                    <img src="/imgs/projects/myportfolio.PNG" alt="project" class="project__image">
+                    <img src="./imgs/projects/myportfolio.PNG" alt="project" class="project__image">
                     <div class="project__description">
                         <h3>Hola! I'm Min Gyeong</h3>
                         <p>2020.08.10 ~ 2020.08.28</p>
