github location modification

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <h1 class="contact__title">CONTACT ME</h1>
         <h2 class="contact__email">mglee.developer@gmail.com</h2>
         <div class="contact__links">
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/mglee-developer/portfolio" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
             <a href="mailto:mglee.developer@gamil.com" target="_blank">
