About me, Project html + css

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     <section id="about" class="section section__container">
         <h1>About me</h1>
         <p>
-            근성있는 개발자, 이민경입니다. 저는 새로운 기술을 익히고, 이를 활용하여 고객에게 편리한 화면을 제공하는 것에 보람을 느낍니다. 
-            또한, 코드 작생 시 발생하는 오류들을 확인하고 해결해 나가는 것에 보람을 느낍니다.
-            쌍용교육센터에서 IT 교육을 들으며, 개인 프로젝트부터 영화 예매 사이트를 구축하는 팀 프로젝트를 진행했습니다.
-            이후, 약 2년 5개월 간 행정안전부 기반의 농산물 쇼핑몰 유지보수를 담당하며 고객에게 안정적인 서비스를 제공했습니다.
+            저는 개발자에게 필요한 3가지 역량을 지녔습니다.
+            첫째, <span class="ability">소통능력</span>입니다. 농산물 쇼핑몰 개발팀에서 유지보수를 하며 타 부서, 전국 마을 관리자들과 소통하며 사용자의 Needs(니즈)를 파악하여 서비스를 제공했습니다.
+            둘째, <span class="ability">업무관리능력</span>입니다. 데드라인이 설정된 일이 아니어도 주어진 일에 대해서 업무를 할당하고 스스로 관리하는 습관이 있어, 목표 달성률이 99%에 달했습니다.
+            셋째, <span class="ability">지속적인 학습</span>입니다. 제가 알고 있는 지식에 대해서 더 깊이 있게 알기 위해 공부하고, 빠르게 변화하는 환경 속에서 최신 트렌드 기술을 익히기 위해 학습하는 습관이 있습니다.
+            위와 같은 역량으로 <span class="ability">좋은 개발자</span>가 되기 위해 성장하겠습니다.
         </p>
         <div class="about__stack">
             <div class="stack">
@@ -214,17 +215,18 @@
                         </p>
                     </div>
                 </a>
-                <!-- <a href="" class="project" target="_blank" data-type="front-end">
-                    <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
+                <a href="https://mglee-developer.github.io/easy/" class="project" target="_blank" data-type="front-end">
+                    <img src="./imgs/projects/easy.png" alt="project" class="project__image">
                     <div class="project__description">
                         <h3>My portfolio</h3>
-                        <p>2020.08.01 ~ 2020.08.31</p>
+                        <p>2020.09.09 ~ 2020.09.16</p>
                         <h3>Tech Stack</h3>
                         <p>
                             <span>HTML</span><span>CSS</span><span>JavaScript</span>
                         </p>
                     </div>
                 </a>
+                <!-- 
                 <a href="" class="project" target="_blank" data-type="back-end">
                     <img src="/imgs/projects/myportfolio.png" alt="" class="project__image">
                     <div class="project__description">
