--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <a href="https://mglee-developer.github.io/easy/" class="project" target="_blank" data-type="front-end">
                     <img src="./imgs/projects/easy.png" alt="project" class="project__image">
                     <div class="project__description">
-                        <h3>My portfolio</h3>
+                        <h3>Momentum Clone Project</h3>
                         <p>2020.09.09 ~ 2020.09.16</p>
                         <h3>Tech Stack</h3>
                         <p>
